--- a/package.json
+++ b/package.json
@@ -6,19 +6,38 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:seed": "bunx prisma db seed",
+    "db:studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "bunx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/nodemailer": "^7.0.1",
+    "@types/twilio": "^3.19.3",
+    "@vercel/blob": "^2.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.6",
+    "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tsx": "^4.20.5",
+    "twilio": "^5.10.0"
   },
   "devDependencies": {
     "typescript": "^5",
