feat: Enhance admin user management and security features
- Added new fields to the AdminUser model for improved security, including isActive, failedAttempts, and lockedUntil.
- Updated the database seeding process to hash the admin password with increased salt rounds for better security.
- Implemented admin authentication verification in API routes to ensure secure access to admin functionalities.
- Enhanced the navigation and footer components to conditionally render based on admin page access.

--- a/env.example
+++ b/env.example
@@ -27,5 +27,12 @@ SENDGRID_FROM_EMAIL="noreply@samanaffa.com"
 ADMIN_EMAIL="admin@samanaffa.com"
 ADMIN_PASSWORD="secure-admin-password"
 
+# Admin Security
+ADMIN_JWT_SECRET="your-super-secure-jwt-secret-here-change-in-production"
+ADMIN_SESSION_SECRET="your-session-secret-here"
+ADMIN_RATE_LIMIT_MAX_ATTEMPTS="5"
+ADMIN_RATE_LIMIT_WINDOW_MS="900000"
+ADMIN_RATE_LIMIT_BLOCK_MS="3600000"
+
 # Application
 NODE_ENV="development"
