feat: Enhance phone number handling in authentication and registration flows
- Added normalization and validation for Senegalese phone numbers across authentication and registration components.
- Unified email and phone input handling in the login form, improving user experience and input validation.
- Updated API routes to support multiple phone formats for user lookup, enhancing compatibility and error handling.
- Refactored phone number display formatting in registration and personal info components for better user interaction.
- Improved error messages for invalid phone formats to guide users more effectively.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:seed": "bunx prisma db seed",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:normalize-phones": "tsx scripts/normalize-phone-numbers.ts",
+    "db:check-phones": "tsx scripts/check-phone-numbers.ts"
   },
   "prisma": {
     "seed": "bunx tsx prisma/seed.ts"
