feat: Remove outdated backend setup guide and update SMS notification service
- Deleted the BACKEND_SETUP.md file as it was no longer needed.
- Updated env.example to include BulkSMS configuration for SMS OTP, replacing Twilio as the primary service.
- Refactored notifications.ts to implement BulkSMS API for sending SMS OTPs, including error handling and logging for better debugging.

--- a/env.example
+++ b/env.example
@@ -13,11 +13,23 @@ EMAIL_HOST="smtp.gmail.com"
 EMAIL_PORT=587
 EMAIL_USER="your-email@gmail.com"
 EMAIL_PASS="your-app-password"
+EMAIL_SENDER="Sama Naffa <noreply@samanaffa.com>"
 
-# Twilio (SMS OTP)
-TWILIO_ACCOUNT_SID="your-twilio-account-sid"
-TWILIO_AUTH_TOKEN="your-twilio-auth-token"
-TWILIO_PHONE_NUMBER="+1234567890"
+# BulkSMS.com (SMS OTP) - Choose ONE authentication method
+# Option 1: API Token authentication (recommended)
+# Format: "token-id:token-secret" (e.g., "BBDE1B476E03498AA768F66A286AABDC-01-B:9jSbVDK20!MXdfRGiIIFu#ffUE8*S")
+BULKSMS_TOKEN="your-token-id:your-token-secret"
+
+# Option 2: Username/Password authentication (alternative)
+# BULKSMS_USERNAME="your-bulksms-username"
+# BULKSMS_PASSWORD="your-bulksms-password"
+
+BULKSMS_SENDER_ID="SamaNaffa"  # Optional: Your sender ID (must be approved by BulkSMS)
+
+# Twilio (SMS OTP) - Keep as backup if needed
+# TWILIO_ACCOUNT_SID="your-twilio-account-sid"
+# TWILIO_AUTH_TOKEN="your-twilio-auth-token"
+# TWILIO_PHONE_NUMBER="+1234567890"
 
 # SendGrid (Alternative email service)
 SENDGRID_API_KEY="your-sendgrid-api-key"
