--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prisma": "^6.16.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.5",
     "twilio": "^5.10.0"
