--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
