--- a/env.example
+++ b/env.example
@@ -46,5 +46,10 @@ ADMIN_RATE_LIMIT_MAX_ATTEMPTS="5"
 ADMIN_RATE_LIMIT_WINDOW_MS="900000"
 ADMIN_RATE_LIMIT_BLOCK_MS="3600000"
 
+# Intouch Payment Provider
+NEXT_PUBLIC_INTOUCH_MERCHANT_ID="***REMOVED***"
+NEXT_PUBLIC_INTOUCH_API_KEY="***REMOVED***"
+NEXT_PUBLIC_INTOUCH_DOMAIN="everestfin.com"
+
 # Application
 NODE_ENV="development"
