--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "prisma generate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "type-check": "tsc --noEmit",
+    "check-all": "bun run lint && bun run type-check",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:seed": "bunx prisma db seed",
