feat: update Intouch API key configuration in environment files
- Changed the environment variable for the Intouch API key from NEXT_PUBLIC_INTOUCH_API_KEY to INTOUCH_API_KEY for better security practices.
- Updated documentation to reflect the new environment variable usage across relevant files.

--- a/env.example
+++ b/env.example
@@ -48,7 +48,7 @@ ADMIN_RATE_LIMIT_BLOCK_MS="3600000"
 
 # Intouch Payment Provider
 NEXT_PUBLIC_INTOUCH_MERCHANT_ID="***REMOVED***"
-NEXT_PUBLIC_INTOUCH_API_KEY="***REMOVED***"
+INTOUCH_API_KEY="examplekey"
 NEXT_PUBLIC_INTOUCH_DOMAIN="everestfin.com"
 
 # Application
