feat: implement Basic Authentication and HMAC signature verification for Intouch callbacks
- Added Basic Authentication support to secure webhook callbacks as per InTouch API requirements.
- Implemented HMAC signature verification for additional security, with options for allowing unsigned callbacks during testing.
- Enhanced logging for incoming requests and processing steps to aid in diagnostics and troubleshooting.
- Updated documentation to reflect new security measures and environment variable requirements.

--- a/env.example
+++ b/env.example
@@ -51,5 +51,16 @@ NEXT_PUBLIC_INTOUCH_MERCHANT_ID="***REMOVED***"
 INTOUCH_API_KEY="examplekey"
 NEXT_PUBLIC_INTOUCH_DOMAIN="everestfin.com"
 
+# Intouch Webhook Configuration
+# Basic Auth credentials for webhook verification (request these from InTouch team)
+INTOUCH_BASIC_AUTH_USERNAME="your-webhook-username"
+INTOUCH_BASIC_AUTH_PASSWORD="your-webhook-password"
+
+# Optional: HMAC signature verification (if InTouch also sends signatures)
+INTOUCH_WEBHOOK_SECRET="your-webhook-secret-here"
+
+# Allow unsigned callbacks during testing (set to false in production)
+INTOUCH_ALLOW_UNSIGNED_CALLBACKS="true"
+
 # Application
 NODE_ENV="development"
