--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.22",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "16.0.0-beta.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.5",
@@ -53,12 +53,16 @@
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "16.0.0-beta.0",
     "@eslint/eslintrc": "^3"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
