feat: enhance Intouch integration with environment-specific configurations and new dependencies
- Added support for test and production credentials in the Intouch payment integration, allowing for environment-specific configurations.
- Updated the .env.example file to include test credentials and clarify usage instructions.
- Introduced new dependencies: @neondatabase/serverless and dotenv, and updated dotenv to version 17.2.3.
- Refactored IntouchPayment and related components to utilize environment variables for improved security and flexibility.
- Removed the obsolete intouch.html file to streamline the project structure.

--- a/env.example
+++ b/env.example
@@ -47,9 +47,18 @@ ADMIN_RATE_LIMIT_WINDOW_MS="900000"
 ADMIN_RATE_LIMIT_BLOCK_MS="3600000"
 
 # Intouch Payment Provider
-NEXT_PUBLIC_INTOUCH_MERCHANT_ID="***REMOVED***"
-INTOUCH_API_KEY="examplekey"
-NEXT_PUBLIC_INTOUCH_DOMAIN="everestfin.com"
+# Environment: 'test' or 'production' (defaults to production if not set, or 'test' if NODE_ENV=development)
+# INTOUCH_ENVIRONMENT="test"
+
+# Production Credentials
+NEXT_PUBLIC_INTOUCH_MERCHANT_ID="your-production-merchant-id"
+INTOUCH_API_KEY="your-production-api-key"
+NEXT_PUBLIC_INTOUCH_DOMAIN="your-production-domain.com"
+
+# Test/Sandbox Credentials (used when INTOUCH_ENVIRONMENT=test)
+NEXT_PUBLIC_INTOUCH_TEST_MERCHANT_ID="your-test-merchant-id"
+INTOUCH_TEST_API_KEY="your-test-api-key"
+NEXT_PUBLIC_INTOUCH_TEST_DOMAIN="your-test-domain.com"
 
 # Intouch Webhook Configuration
 # Basic Auth credentials for webhook verification (request these from InTouch team)
