--- a/package.json
+++ b/package.json
@@ -5,26 +5,22 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
     "check-all": "bun run lint && bun run type-check",
-    "db:migrate": "prisma migrate dev",
-    "db:generate": "prisma generate",
-    "db:seed": "bunx prisma db seed",
-    "db:studio": "prisma studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bunx tsx prisma/seed.ts",
     "db:normalize-phones": "tsx scripts/normalize-phone-numbers.ts",
     "db:check-phones": "tsx scripts/check-phone-numbers.ts"
   },
-  "prisma": {
-    "seed": "bunx tsx prisma/seed.ts"
-  },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.11.0",
     "@heroicons/react": "^2.2.0",
     "@neondatabase/serverless": "^1.0.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.17.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-query-devtools": "^5.89.0",
@@ -38,6 +34,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
     "framer-motion": "^12.23.13",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.22",
@@ -45,7 +42,6 @@
     "next": "16.0.0-beta.0",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.6",
-    "prisma": "^6.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-phone-number-input": "^3.4.12",
@@ -54,15 +50,16 @@
     "twilio": "^5.10.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "16.0.0-beta.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   },
   "overrides": {
     "@types/react": "19.2.2",
