--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.5",
-    "twilio": "^5.10.0"
+    "twilio": "^5.10.0",
+    "vercel": "^48.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
