--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.22",
     "lucide-react": "^0.544.0",
-    "next": "16.0.0-beta.0",
+    "next": "16.0.7",
     "next-auth": "^4.24.11",
     "nodemailer": "^7.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.5",
@@ -55,17 +55,17 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
-    "baseline-browser-mapping": "^2.8.32",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "baseline-browser-mapping": "^2.9.0",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0-beta.0",
+    "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
   "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
