--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.1",
     "@types/twilio": "^3.19.3",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
