--- a/env.example
+++ b/env.example
@@ -82,11 +82,28 @@ NEXT_PUBLIC_INTOUCH_TEST_DOMAIN="your-test-domain.com"
 INTOUCH_BASIC_AUTH_USERNAME="your-webhook-username"
 INTOUCH_BASIC_AUTH_PASSWORD="your-webhook-password"
 
+# Test/Sandbox Basic Auth credentials (used in development/staging)
+INTOUCH_BASIC_AUTH_USERNAME_TEST="your-test-webhook-username"
+INTOUCH_BASIC_AUTH_PASSWORD_TEST="your-test-webhook-password"
+
 # Optional: HMAC signature verification (if InTouch also sends signatures)
 INTOUCH_WEBHOOK_SECRET="your-webhook-secret-here"
 
 # Allow unsigned callbacks during testing (set to false in production)
 INTOUCH_ALLOW_UNSIGNED_CALLBACKS="true"
+
+# Payment Security Configuration
+# Rate limiting for payment callbacks (prevents abuse)
+PAYMENT_RATE_LIMIT_WINDOW="900000"          # 15 minutes in milliseconds
+PAYMENT_RATE_LIMIT_MAX_REQUESTS="10"        # Max callback requests per window per IP
+
+# Payment amount validation (prevents tampering)
+PAYMENT_MAX_AMOUNT="10000000"               # Maximum: 10M CFA
+PAYMENT_MIN_AMOUNT="100"                    # Minimum: 100 CFA
+
+# Request validation (security hardening)
+PAYMENT_MAX_PAYLOAD_SIZE="10240"            # Maximum: 10KB payload size
+PAYMENT_IDEMPOTENCY_TTL="86400000"          # Idempotency key TTL: 24 hours in ms
 
 # Application
 NODE_ENV="development"
