--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.2.1",
     "react-phone-number-input": "^3.4.12",
     "tailwind-merge": "^3.3.1",
